# linkeroo

./: README.md  linkeroo.txt  pyproject.toml
src/linkeroo/: __main__.py  utils.py
src/modules/linkeroo/: pyproject.toml
src/modules/linkeroo/linkeroo/: linkeroo.py
