[build-system]
requires = ["setuptools", "wheel", "poetry-core"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "linkeroo"
version = "1.0.1"
description = "Linkeroo dependency tree mapper for static linking of C/C++ projects"
authors = ["Elliott Lynch <elynch@modelsrus.ai>"]
license = "None"
homepage = "https://github.com/elynch90/linkeroo/"
repository = "https://github.com/elynch90/linkeroo/"
keywords = ["C", "CPP", "linker", "util", "tree mapper"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.0.0"
boto3 = "^1.0.0"
flask = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"

[tool.poetry.scripts]
linkeroo = "src/linkeroo:main"
